--- a/finpro-web/src/app/globals.css
+++ b/finpro-web/src/app/globals.css
@@ -14,7 +14,7 @@
     --foreground: #ededed;
   }
 }
-
+/* 
 html,
 body {
   max-width: 100vw;
@@ -44,4 +44,4 @@ a {
   html {
     color-scheme: dark;
   }
-}
+} */
