--- a/finpro-web/src/app/globals.css
+++ b/finpro-web/src/app/globals.css
@@ -3,7 +3,7 @@
 @source "../../.flowbite-react/class-list.json";
 @plugin "daisyui";
 
-:root {
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -13,7 +13,7 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 html,
 body {
@@ -21,7 +21,7 @@ body {
   overflow-x: hidden;
 }
 
-body {
+/* body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
@@ -44,4 +44,4 @@ a {
   html {
     color-scheme: dark;
   }
-}
+} */
