--- a/finpro-web/src/app/globals.css
+++ b/finpro-web/src/app/globals.css
@@ -8,9 +8,18 @@
 html,
 body {
   max-width: 100vw;
+  background-color: #ffffff;
   overflow-x: hidden;
 }
 
+/* Hide number input spinners */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
-
-
+/* For Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
