--- a/finpro-web/src/app/globals.css
+++ b/finpro-web/src/app/globals.css
@@ -3,6 +3,19 @@
 @source "../../.flowbite-react/class-list.json";
 @plugin "daisyui";
 
+@theme {
+  --color-primary-50: #fef2f2;
+  --color-primary-100: #fee2e2;
+  --color-primary-200: #fecaca;
+  --color-primary-300: #fca5a5;
+  --color-primary-400: #f87171;
+  --color-primary-500: #ef4444;
+  --color-primary-600: #dc2626;
+  --color-primary-700: #b91c1c;
+  --color-primary-800: #991b1b;
+  --color-primary-900: #7f1d1d;
+}
+
 html,
 body {
   max-width: 100vw;
@@ -39,6 +52,9 @@ input[type="number"] {
   }
   .page-subtitle {
     @apply text-gray-500 text-sm w-full
+  }
+  .formik-error-msg {
+    @apply text-xs font-medium py-1 px-2 my-1 w-max rounded-sm text-white bg-red-700
   }
 }
 
