--- a/finpro-web/src/app/globals.css
+++ b/finpro-web/src/app/globals.css
@@ -56,6 +56,9 @@ input[type="number"] {
   .formik-error-msg {
     @apply text-xs font-medium py-1 px-2 my-1 w-max rounded-sm text-white bg-red-700
   }
+  .pagination-item{
+    @apply flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 
+  }
 }
 
 @layer utilities {
